// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests CreateOrder component +++ renderer component 1`] = `
<form
  className="makeStyles-root-1"
  onSubmit={[Function]}
>
  <WithStyles(ForwardRef(Container))>
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h2"
    >
      Новая заявка
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      label="Название заявки"
      margin="normal"
      name="name"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Статус заявки
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Select))
      fullWidth={true}
      id="demo-simple-select-outlined"
      onChange={[Function]}
      value="Статус-1"
      variant="outlined"
    >
      <WithStyles(ForwardRef(MenuItem))
        id="5e28378cfa502c1edc0e7689"
        key="0"
        value="Статус-1"
      >
        Статус-1
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e283799fa502c1edc0e768b"
        key="1"
        value="Статус-2"
      >
        Статус-2
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e28379ffa502c1edc0e768c"
        key="2"
        value="Статус-4"
      >
        Статус-4
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e2837a5fa502c1edc0e768d"
        key="3"
        value="Статус-5"
      >
        Статус-5
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Select))>
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Произвольные поля
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="0"
      label="Мобильный телефон"
      name="Мобильный телефон"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="1"
      label="Номер паспорта"
      name="Номер паспорта"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="2"
      label="Домашний тел"
      name="Домашний тел"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="3"
      label="Паспорт"
      name="Паспорт"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Button))
      disabled={true}
      variant="contained"
    >
      Добавить заявку
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Container))>
</form>
`;

exports[`Tests CreateOrder component +++ simulation of a change event on the select status in select field 1`] = `
<form
  className="makeStyles-root-1"
  onSubmit={[Function]}
>
  <WithStyles(ForwardRef(Container))>
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h2"
    >
      Новая заявка
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      label="Название заявки"
      margin="normal"
      name="name"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Статус заявки
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Select))
      fullWidth={true}
      id="demo-simple-select-outlined"
      onChange={[Function]}
      value="Статус-5"
      variant="outlined"
    >
      <WithStyles(ForwardRef(MenuItem))
        id="5e28378cfa502c1edc0e7689"
        key="0"
        value="Статус-1"
      >
        Статус-1
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e283799fa502c1edc0e768b"
        key="1"
        value="Статус-2"
      >
        Статус-2
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e28379ffa502c1edc0e768c"
        key="2"
        value="Статус-4"
      >
        Статус-4
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e2837a5fa502c1edc0e768d"
        key="3"
        value="Статус-5"
      >
        Статус-5
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Select))>
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Произвольные поля
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="0"
      label="Мобильный телефон"
      name="Мобильный телефон"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="1"
      label="Номер паспорта"
      name="Номер паспорта"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="2"
      label="Домашний тел"
      name="Домашний тел"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="3"
      label="Паспорт"
      name="Паспорт"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Button))
      disabled={true}
      variant="contained"
    >
      Добавить заявку
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Container))>
</form>
`;

exports[`Tests CreateOrder component +++ simulation of a change event on the text field(order name) 1`] = `
<form
  className="makeStyles-root-1"
  onSubmit={[Function]}
>
  <WithStyles(ForwardRef(Container))>
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h2"
    >
      Новая заявка
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      label="Название заявки"
      margin="normal"
      name="name"
      onChange={[Function]}
      type="text"
      value="Some name for order"
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Статус заявки
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Select))
      fullWidth={true}
      id="demo-simple-select-outlined"
      onChange={[Function]}
      value="Статус-1"
      variant="outlined"
    >
      <WithStyles(ForwardRef(MenuItem))
        id="5e28378cfa502c1edc0e7689"
        key="0"
        value="Статус-1"
      >
        Статус-1
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e283799fa502c1edc0e768b"
        key="1"
        value="Статус-2"
      >
        Статус-2
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e28379ffa502c1edc0e768c"
        key="2"
        value="Статус-4"
      >
        Статус-4
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e2837a5fa502c1edc0e768d"
        key="3"
        value="Статус-5"
      >
        Статус-5
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Select))>
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Произвольные поля
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="0"
      label="Мобильный телефон"
      name="Мобильный телефон"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="1"
      label="Номер паспорта"
      name="Номер паспорта"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="2"
      label="Домашний тел"
      name="Домашний тел"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="3"
      label="Паспорт"
      name="Паспорт"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Button))
      color="primary"
      type="submit"
      variant="contained"
    >
      Добавить заявку
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Container))>
</form>
`;

exports[`Tests CreateOrder component simulation of a change event on the text field 1`] = `
<form
  className="makeStyles-root-1"
  onSubmit={[Function]}
>
  <WithStyles(ForwardRef(Container))>
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h2"
    >
      Новая заявка
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      label="Название заявки"
      margin="normal"
      name="name"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Статус заявки
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Select))
      fullWidth={true}
      id="demo-simple-select-outlined"
      onChange={[Function]}
      value="Статус-1"
      variant="outlined"
    >
      <WithStyles(ForwardRef(MenuItem))
        id="5e28378cfa502c1edc0e7689"
        key="0"
        value="Статус-1"
      >
        Статус-1
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e283799fa502c1edc0e768b"
        key="1"
        value="Статус-2"
      >
        Статус-2
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e28379ffa502c1edc0e768c"
        key="2"
        value="Статус-4"
      >
        Статус-4
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))
        id="5e2837a5fa502c1edc0e768d"
        key="3"
        value="Статус-5"
      >
        Статус-5
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Select))>
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Typography))
      className="makeStyles-title-6"
      noWrap={true}
      variant="h3"
    >
      Произвольные поля
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="0"
      label="Мобильный телефон"
      name="Мобильный телефон"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="1"
      label="Номер паспорта"
      name="Номер паспорта"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="2"
      label="Домашний тел"
      name="Домашний тел"
      onChange={[Function]}
      type="text"
      value=""
      variant="outlined"
    />
    <WithStyles(ForwardRef(TextField))
      className="makeStyles-textField-5"
      fullWidth={true}
      key="3"
      label="Паспорт"
      name="Паспорт"
      onChange={[Function]}
      type="text"
      value="Паспорт"
      variant="outlined"
    />
    <WithStyles(ForwardRef(Divider))
      className="makeStyles-divider-7"
    />
    <WithStyles(ForwardRef(Button))
      disabled={true}
      variant="contained"
    >
      Добавить заявку
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Container))>
</form>
`;
